# PythonProject-Template

./: Dockerfile  README.md  change_project_attributes.py  change_project_name.py  pyproject.toml  requirements.txt  run_pytests.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_dist.yml  docs.yml  tests.yml
docker_files/: build_image_and_run.py
src/python_template/: __init__.py  __main__.py
tests/: test_dummy.py
