[project]
name = "PythonTemplate"
dynamic = ["version", "readme"]
description = ""
authors = [{name = "Jeremie Gince", email = "gincejeremie@gmail.com"},]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.29.5",
    "setuptools>=65.5.1",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest_json_report>=1.5.0",
    "pythonbasictools>=0.0.1a11",
    "psutil>=5.9.6",
    "docutils>=0.21.2",
]
license={file="LICENSE"}


[build-system]
requires = [
    "setuptools",
    "wheel",
    "pythonbasictools",
    "numpy",
    "psutil",
]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {attr = "python_template.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
version = "0.0.1"
package-mode = true
packages = [{include = "python_template", from="src"}]


[tool.poetry.dependencies]



[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
addopts = [
    "--cov=src",
    "--no-cov",
    "--durations=10",
]
